# financial-advisor-agent

./: .env.example  .gitignore  3号工作报告.md  AGENTS.md  README.md  pyproject.toml
.github/workflows/: fixture-e2e.yml  frontend.yml  quality.yml
config/: hermes-config.template.yaml
data/fixtures/: market_data.json
data/fixtures/api_contracts/: market_compare_request.json  market_compare_response.json
docs/contributions/: 04-risk-lab-mcp.md
frontend/: .gitignore  .npmrc  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: advisor.spec.ts  history.spec.ts  market.spec.ts  mock-api.mjs  portfolio.spec.ts  risk.spec.ts  run-e2e.mjs  ui-shell.spec.ts
frontend/mock/: README.md  health.json  market-compare.json  market-snapshot.json  portfolio-plan.json  risk-assets.json  risk-portfolio.json  risk-profile.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  keys.ts  types.ts
scripts/: bootstrap.ps1  local_preflight.py  model_preflight.py  preflight.ps1  real_market_preflight.py  run-app.ps1  run-dashboard.ps1  sync-hermes-config.ps1  verify-hermes.ps1  verify_install.py
src/finance_advisor/: __init__.py  mcp_server.py  schemas.py
tests/: test_allocation.py  test_conversation.py  test_hermes_cli_adapter.py  test_market.py  test_market_compare.py  test_mcp_protocol.py  test_mcp_tools.py  test_metrics.py  test_model_config.py  test_portfolio_risk.py  test_profile.py  test_risk_service.py  test_web_advisor.py  test_web_app.py  test_web_market.py  test_web_portfolio.py  test_web_risk.py  test_web_sessions.py
(+71 files in other folders)
